@@ -1,24 +1,30 @@
 package com.sangbu3jo.elephant.security.jwt;
 
 import com.sangbu3jo.elephant.users.entity.UserRoleEnum;
-import io.jsonwebtoken.*;
+import io.jsonwebtoken.Claims;
+import io.jsonwebtoken.ExpiredJwtException;
+import io.jsonwebtoken.Jwts;
+import io.jsonwebtoken.MalformedJwtException;
+import io.jsonwebtoken.SignatureAlgorithm;
+import io.jsonwebtoken.SignatureException;
+import io.jsonwebtoken.UnsupportedJwtException;
 import io.jsonwebtoken.security.Keys;
 import jakarta.annotation.PostConstruct;
 import jakarta.servlet.http.Cookie;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
+import java.io.UnsupportedEncodingException;
+import java.net.URLDecoder;
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
+import java.security.Key;
+import java.util.Base64;
+import java.util.Date;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 import org.springframework.util.StringUtils;
-
-import java.io.UnsupportedEncodingException;
-import java.net.URLDecoder;
-import java.net.URLEncoder;
-import java.security.Key;
-import java.util.Base64;
-import java.util.Date;
 
 
 @Component
@@ -31,8 +37,8 @@ public class JwtUtil {
   // Token 식별자
   public static final String BEARER_PREFIX = "Bearer ";
 
-  // 토큰 만료시간
-  private final long TOKEN_TIME = 60 * 60 * 1000L; // 60분
+  // 엑세스 토큰 만료시간
+  private final long TOKEN_TIME = 60 * 2 * 1000L; // 2분
 
   @Value("${jwt.secret.key}") // Base64 Encode 한 SecretKey
   private String secretKey;
@@ -48,7 +54,7 @@ public class JwtUtil {
     key = Keys.hmacShaKeyFor(bytes);
   }
 
-  // 토큰 생성
+  // 엑세스 토큰 생성
   public String createToken(String username, UserRoleEnum role) {
     Date date = new Date();
 
@@ -64,17 +70,24 @@ public class JwtUtil {
 
   // JWT Cookie 에 저장
   public void addJwtToCookie(String token, HttpServletResponse res) {
-    try {
-      token = URLEncoder.encode(token, "utf-8").replaceAll("\\+", "%20"); // Cookie Value 에는 공백이 불가능해서 encoding 진행
+    token = URLEncoder.encode(token, StandardCharsets.UTF_8).replaceAll("\\+", "%20"); // Cookie Value 에는 공백이 불가능해서 encoding 진행
 
-      Cookie cookie = new Cookie(AUTHORIZATION_HEADER, token); // Name-Value
-      cookie.setPath("/");
+    Cookie cookie = new Cookie(AUTHORIZATION_HEADER, token); // Name-Value
+    cookie.setPath("/");
 
-      // Response 객체에 Cookie 추가
-      res.addCookie(cookie);
-    } catch (UnsupportedEncodingException e) {
-      logger.error(e.getMessage());
-    }
+    cookie.setHttpOnly(true); // For security, make the cookie HttpOnly
+    res.addCookie(cookie);
+  }
+
+  // JWT Cookie 에 refresh token 저장
+  public void addJwtToCookieRefreshToken(String refreshToken, HttpServletResponse res) {
+    refreshToken = URLEncoder.encode(refreshToken, StandardCharsets.UTF_8).replaceAll("\\+", "%20"); // Cookie Value 에는 공백이 불가능해서 encoding 진행
+
+    Cookie cookie = new Cookie("RefreshToken", refreshToken); // refreshToken
+    cookie.setPath("/");
+
+    cookie.setHttpOnly(true); // For security, make the cookie HttpOnly
+    res.addCookie(cookie);
   }
 
   // JWT 토큰 substring
@@ -91,9 +104,7 @@ public class JwtUtil {
     try {
       Jwts.parserBuilder().setSigningKey(key).build().parseClaimsJws(token);
       return true;
-    } catch (SecurityException | MalformedJwtException
-| SignatureException
- e) {
+    } catch (SecurityException | MalformedJwtException | SignatureException e) {
       logger.error("Invalid JWT signature, 유효하지 않는 JWT 서명 입니다.");
     } catch (ExpiredJwtException e) {
       logger.error("Expired JWT token, 만료된 JWT token 입니다.");
@@ -142,4 +153,7 @@ public class JwtUtil {
       }
     }
   }
+
+
+
 }
